intel/bench_214_new/extr_.anypixelfirmwaredisplayThirdPartySPLsrcstm32f0xx_rcc.c_RCC_GetClocksFreq_with_main/log.txt
bench_214_new/extr_.anypixelfirmwaredisplayThirdPartySPLsrcstm32f0xx_rcc.c_RCC_GetClocksFreq_with_main/extr_.anypixelfirmwaredisplayThirdPartySPLsrcstm32f0xx_rcc.c_RCC_GetClocksFreq_with_main.c:79:38: error: indirection requires pointer operand ('int' invalid)
      RCC_Clocks->SYSCLK_Frequency = *HSI48_VALUE;
                                     ^~~~~~~~~~~~
1 error generated.
HLS FPGA Parse FAILED.
